Add GitHub link, fix indentation

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-			<title>Lifespan</title>
-			<script src="script.js"></script>
-			<link rel="stylesheet" href="styles.css">
-		</head>
-		<body>
-			<h1 id="js--lifespan--title">Lifespan</h1>
-			<div id="js--lifespan--text"></div>
-			<div id="js--lifespan--area"></div>
-			<script>lifespan('1994-01-16')</script>
+		<title>Lifespan</title>
+		<script src="script.js"></script>
+		<link rel="stylesheet" href="styles.css">
+	</head>
+	<body>
+		<h1 id="js--lifespan--title">Lifespan</h1>
+		<div id="js--lifespan--text"></div>
+		<div id="js--lifespan--area"></div>
+		<script>lifespan('1994-01-16')</script>
+		<p><a href="https://github.com/lewisgoddard/lifespan">Fork on GitHub</a></p>
 	</body>
 </html>
