--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Lifespan</title>
 		<script src="script.js"></script>
 		<link rel="stylesheet" href="styles.css">
