--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 		<div id="js--lifespan--text"></div>
 		<div id="js--lifespan--area"></div>
 		<script>lifespan('1994-01-16')</script>
-		<p><a href="https://github.com/lewisgoddard/lifespan">Fork on GitHub</a></p>
+		<p>
+			<a href="https://twitter.com/juanbuis/status/930404332276736001">Inspired by @juanbuis</a>
+			&emsp;&middot;&emsp;
+			<a href="https://github.com/lewisgoddard/lifespan">Fork on GitHub</a>
+		</p>
 	</body>
 </html>
