--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<h1 id="js--lifespan--title">Lifespan</h1>
-		<div id="js--lifespan--text"></div>
-		<div id="js--lifespan--area"></div>
-		<script>lifespan('1994-01-16')</script>
-		<p>
-			<a href="https://twitter.com/juanbuis/status/930404332276736001">Inspired by @juanbuis</a>
-			&emsp;&middot;&emsp;
-			<a href="https://github.com/lewisgoddard/lifespan">Fork on GitHub</a>
-		</p>
+		<header>
+			<h1 id="js--lifespan--title">Lifespan</h1>
+		</header>
+		<content>
+			<div id="js--lifespan--text"></div>
+			<div id="js--lifespan--area"></div>
+		</content>
+		<footer>
+			<p>
+				<a href="https://twitter.com/juanbuis/status/930404332276736001">Inspired by @juanbuis</a>
+				&emsp;&middot;&emsp;
+				<a href="https://github.com/lewisgoddard/lifespan">Fork on GitHub</a>
+			</p>
+		</footer>
 	</body>
+	<script>lifespan('1994-01-16')</script>
 </html>
