--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Lifespan</title>
-		<script src="script.js"></script>
 		<link rel="stylesheet" href="styles.css">
+		<script src="script.js"></script>
 	</head>
 	<body>
 		<header>
 			<h1 id="js--lifespan--title">Lifespan</h1>
 		</header>
 		<content>
+			<div id="js--lifespan--inputs">
+				<input  id="js--lifespan--inputs--date"   type="date"   value="1994-01-16" placeholder="1994-01-16">
+				<input  id="js--lifespan--inputs--years"  type="number" value="100"        placeholder="100">
+				<button id="js--lifespan--inputs--submit" type="submit">Live</button>
+			</div>
 			<div id="js--lifespan--text"></div>
 			<div id="js--lifespan--area"></div>
 		</content>
@@ -24,4 +29,14 @@
 		</footer>
 	</body>
 	<script>lifespan('1994-01-16')</script>
+	<script>
+		function customLifespan() {
+			var dob   = document.getElementById('js--lifespan--inputs--date').value
+			var years = document.getElementById('js--lifespan--inputs--years').value
+			console.log(dob, years)
+			lifespan(dob, years)
+		}
+		document.getElementById('js--lifespan--inputs--submit').onclick = function() {customLifespan()}
+	</script>
+	<script src="vanilla.downBoy.js"></script>
 </html>
