--- a/index.html
+++ b/index.html
@@ -26,6 +26,34 @@
 			<div id="js--lifespan--text"></div>
 			<div id="js--lifespan--area"></div>
 		</content>
+		<content>
+			<h2>Life Expectancy</h2>
+<figure class="figure" id="table-6e2a2c59">
+<table class="table">
+<caption class="table__caption">Table 1: Life expectancy at birth by sex and ethnic group: England and Wales 2011 to 2014</caption>
+<colgroup><col><col><col><col></colgroup>
+<tbody><tr class="table__header-row table__nowrap"><th scope="col" class="align-left">Ethnic group</th><th scope="col" class="align-right">Females</th><th scope="col" class="align-right">Males</th><th scope="col" class="align-right">Sex gap<br>(years)</th></tr>
+<tr><th scope="row" class="table__nowrap align-left">Asian <br>other</th><td class="align-right">86.9</td><td class="align-right">84.5</td><td class="align-right">2.4</td></tr>
+<tr><th scope="row" class="table__nowrap align-left">Bangladeshi</th><td class="align-right">87.3</td><td class="align-right">81.1</td><td class="align-right">6.2</td></tr>
+<tr><th scope="row" class="table__nowrap align-left">Black <br>African</th><td class="align-right">88.9</td><td class="align-right">83.8</td><td class="align-right">5.1</td></tr>
+<tr><th scope="row" class="table__nowrap align-left">Black<br>Caribbean</th><td class="align-right">84.6</td><td class="align-right">80.7</td><td class="align-right">3.9</td></tr>
+<tr><th scope="row" class="table__nowrap align-left">Black <br>other</th><td class="align-right">86.8</td><td class="align-right">82.0</td><td class="align-right">4.8</td></tr>
+<tr><th scope="row" class="table__nowrap align-left">Indian</th><td class="align-right">85.4</td><td class="align-right">82.3</td><td class="align-right">3.1</td></tr>
+<tr><th scope="row" class="table__nowrap align-left">Mixed</th><td class="align-right">83.1</td><td class="align-right">79.3</td><td class="align-right">3.8</td></tr>
+<tr><th scope="row" class="table__nowrap align-left">Other</th><td class="align-right">86.9</td><td class="align-right">84.0</td><td class="align-right">2.9</td></tr>
+<tr><th scope="row" class="table__nowrap align-left">Pakistani</th><td class="align-right">84.8</td><td class="align-right">82.3</td><td class="align-right">2.5</td></tr>
+<tr><th scope="row" class="table__nowrap align-left">White</th><td class="align-right">83.1</td><td class="align-right">79.7</td><td class="align-right">3.4</td></tr>
+<tr><th scope="row" class="table__nowrap align-left">Ethnic group<br>gap (years)</th><td class="align-right">5.8</td><td class="align-right">5.2</td><td class="align-right"></td></tr>
+</tbody></table><footer class="figure__footer">
+<p class="figure__source">Source: <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/lifeexpectancies/articles/ethnicdifferencesinlifeexpectancyandmortalityfromselectedcausesinenglandandwales/2011to2014">Office for National Statisitcs</a></p>
+<p class="figure__notes">Notes</p>
+<ol class="figure__footnotes">
+<li id="table-6e2a2c59-note-1" class="figure__footnote-item">Office for National Statistics (ONS) figures based on the linkage of Census 2011 to Patient Register records and subsequent deaths followed up to 26th March 2014.</li>
+<li id="table-6e2a2c59-note-2" class="figure__footnote-item">‘Other’ ethnic group includes Arab, Chinese and Other ethnic groups.</li>
+</ol>
+</footer>
+</figure>
+		</content>
 		<footer>
 			<p>
 				<a href="https://twitter.com/juanbuis/status/930404332276736001">Inspired by @juanbuis</a>
