--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </figure>
 		</content>
 		<footer>
-			<p>
+			<p class="align-center">
 				<a href="https://twitter.com/juanbuis/status/930404332276736001">Inspired by @juanbuis</a>
 				&emsp;&middot;&emsp;
 				<a href="https://github.com/lewisgoddard/lifespan">Fork on GitHub</a>
