--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div id="js--lifespan--text"></div>
 			<div id="js--lifespan--area"></div>
 		</content>
-		<content style="max-width: 70rem;">
+		<content>
 			<h2>Life Expectancy</h2>
 <figure class="figure" id="table-6e2a2c59">
 <table class="table">
