--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 <caption class="table__caption">Table 1: Life expectancy at birth by sex and ethnic group: England and Wales 2011 to 2014</caption>
 <colgroup><col><col><col><col></colgroup>
 <tbody><tr class="table__header-row table__nowrap"><th scope="col" class="align-left">Ethnic group</th><th scope="col" class="align-right">Females</th><th scope="col" class="align-right">Males</th><th scope="col" class="align-right">Sex gap<br>(years)</th></tr>
-<tr><th scope="row" class="table__nowrap align-left">Asian <br>other</th><td class="align-right">86.9</td><td class="align-right">84.5</td><td class="align-right">2.4</td></tr>
+<tr><th scope="row" class="table__nowrap align-left">Asian other</th><td class="align-right">86.9</td><td class="align-right">84.5</td><td class="align-right">2.4</td></tr>
 <tr><th scope="row" class="table__nowrap align-left">Bangladeshi</th><td class="align-right">87.3</td><td class="align-right">81.1</td><td class="align-right">6.2</td></tr>
-<tr><th scope="row" class="table__nowrap align-left">Black <br>African</th><td class="align-right">88.9</td><td class="align-right">83.8</td><td class="align-right">5.1</td></tr>
-<tr><th scope="row" class="table__nowrap align-left">Black<br>Caribbean</th><td class="align-right">84.6</td><td class="align-right">80.7</td><td class="align-right">3.9</td></tr>
-<tr><th scope="row" class="table__nowrap align-left">Black <br>other</th><td class="align-right">86.8</td><td class="align-right">82.0</td><td class="align-right">4.8</td></tr>
+<tr><th scope="row" class="table__nowrap align-left">Black African</th><td class="align-right">88.9</td><td class="align-right">83.8</td><td class="align-right">5.1</td></tr>
+<tr><th scope="row" class="table__nowrap align-left">Black Caribbean</th><td class="align-right">84.6</td><td class="align-right">80.7</td><td class="align-right">3.9</td></tr>
+<tr><th scope="row" class="table__nowrap align-left">Black other</th><td class="align-right">86.8</td><td class="align-right">82.0</td><td class="align-right">4.8</td></tr>
 <tr><th scope="row" class="table__nowrap align-left">Indian</th><td class="align-right">85.4</td><td class="align-right">82.3</td><td class="align-right">3.1</td></tr>
 <tr><th scope="row" class="table__nowrap align-left">Mixed</th><td class="align-right">83.1</td><td class="align-right">79.3</td><td class="align-right">3.8</td></tr>
 <tr><th scope="row" class="table__nowrap align-left">Other</th><td class="align-right">86.9</td><td class="align-right">84.0</td><td class="align-right">2.9</td></tr>
