--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <tr><th scope="row" class="table__nowrap align-left">Other</th><td class="align-right">86.9</td><td class="align-right">84.0</td><td class="align-right">2.9</td></tr>
 <tr><th scope="row" class="table__nowrap align-left">Pakistani</th><td class="align-right">84.8</td><td class="align-right">82.3</td><td class="align-right">2.5</td></tr>
 <tr><th scope="row" class="table__nowrap align-left">White</th><td class="align-right">83.1</td><td class="align-right">79.7</td><td class="align-right">3.4</td></tr>
-<tr><th scope="row" class="table__nowrap align-left">Ethnic group<br>gap (years)</th><td class="align-right">5.8</td><td class="align-right">5.2</td><td class="align-right"></td></tr>
+<tr><th scope="row" class="table__nowrap align-left">Ethnic group gap (years)</th><td class="align-right">5.8</td><td class="align-right">5.2</td><td class="align-right"></td></tr>
 </tbody></table><footer class="figure__footer">
 <p class="figure__source">Source: <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/lifeexpectancies/articles/ethnicdifferencesinlifeexpectancyandmortalityfromselectedcausesinenglandandwales/2011to2014">Office for National Statisitcs</a></p>
 <p class="figure__notes">Notes</p>
